--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/index.html.twig
@@ -1,7 +1,10 @@
-{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
+{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}
+{% trans_default_domain 'emsco-environment' %}
 
 {% block title %}{{ 'view.environment.index.title'|trans }}{% endblock %}
-{% block pagetitle %}{{ 'view.environment.index.pagetitle'|trans }}{% endblock %}
+{% block pagetitle %}
+    <i class="fa fa-database"></i>&nbsp;{{ 'view.environment.index.pagetitle'|trans }}
+{% endblock %}
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
@@ -14,164 +17,35 @@
     </ol>
 {% endblock %}
 
+{% block column_label %}
+    <span class="badge bg-{{ data.color }}">{{- data.label -}}</span>
+{% endblock column_label %}
+
+{% block column_indexes %}
+    {% if data.indexes|length > 1 %}
+        <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                data-bs-target="#modal-environment-{{ data.id }}">
+            {{ 'view.environment.index.environment_index_count'|trans({'%count%': data.indexes|length}) }}
+        </button>
+    {% elseif data.indexes|length == 1 %}
+        {{ data.indexes|first.name }}
+    {% endif %}
+{% endblock column_indexes %}
+
 {% block body %}
 
     <div class="row">
-        <div class="col-12">
-            <div class="card card-light">
-                <div class="card-header">
-                    <h3 class="card-title">Select your options</h3>
-                </div>
-                <!-- /.box-header -->
-                <!-- form start -->
+        <div class="col-md-12">
+            <div>
+                {%  set toolbar %}
+                    <a class="btn btn-primary" href="{{ path('environment.add') }}"><i class="fa fa-plus"></i> {{ add_label|default(form.vars.add_label)|trans }}</a>
+                {%  endset %}
 
-                <div class="card-body">
-                    toto
-                </div>
-                <!-- /.box-body -->
-                <div class="card-footer text-end">
-                    <div class="btn-group">
-                        <button type="submit" id="rebuild_index_rebuild" name="rebuild_index[rebuild]" class="btn btn-primary btn-sm "><span class="fa fa-recycle"></span>&nbsp;
-                            Rebuild
-                        </button>
-                    </div>
-                </div>
-                <!-- /.box-footer -->
-            </div>
-
-            <div class="card card-{{ theme_color }} card-outline">
-                <div class="card-header">
-                    <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.local_environment_label'|trans }}</h3>
-                    <div class="btn-group float-end">
-                        <a class="btn btn-xs btn-primary" href="{{ path('environment.add') }}">
-                            <i class="fa fa-plus"></i> {{ 'view.environment.index.add_environment_button'|trans }}
-                        </a>
-                        <button type="button" class="btn btn-primary btn-xs" data-bs-toggle="modal" data-bs-target="#environment_modal_reorder">
-                            <i class="fa fa-reorder"></i> {{ 'view.environment.index.reorder_button'|trans }}
-                        </button>
-                    </div>
-                    <div class="modal fade" id="environment_modal_reorder" tabindex="-1" role="dialog" aria-labelledby="myModalReorder">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title" id="myModalReorderLabel">
-                                        <strong>{{ 'view.environment.index.reorder_title'|trans }}</strong>
-                                    </h4>
-                                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                {{ form_start(form) }}
-                                <div class="modal-body">
-                                    <ul class="list-group sortable" id="content_type_modal_reorder_list">
-                                        {% for child in form.environmentNames %}
-                                            <li class="list-group-item">
-                                                <i class="glyphicon glyphicon-move"></i>
-                                                {{ child.vars.value }}
-                                                {{ form_row( child ) }}
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                                <div class="modal-footer">
-                                    <div class="btn-group">
-                                        {{ form_widget(form.reorder) }}
-                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                                            <i class="fa fa-close"></i> {{ 'view.environment.index.close_modal_button'|trans }}
-                                        </button>
-                                    </div>
-                                </div>
-                                {{ form_end(form) }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.box-header -->
-                <div class="card-body">
-                    {% if environments|length == 0 %}
-                        {{ 'view.environment.index.no_environment_yet'|trans }}
-                    {% else %}
-                        <div class="table-responsive">
-                            <table class="table table-condensed table-striped">
-                                <tbody>
-                                <tr>
-                                    <th class="text-center" style="width: 10px">
-                                        {{ 'view.environment.index.count_label'|trans }}
-                                    </th>
-                                    <th>{{ 'view.environment.index.label'|trans }}</th>
-                                    <th>{{ 'view.environment.index.name_label'|trans }}</th>
-                                    <th>{{ 'view.environment.index.alias_label'|trans }}</th>
-                                    <th>{{ 'view.environment.index.indexes_label'|trans }}</th>
-                                    <th class="text-center">{{ 'view.environment.index.total_indexed_label'|trans }}</th>
-                                    <th class="text-center">{{ 'view.environment.index.total_in_ems'|trans }}</th>
-                                    <th class="text-center">{{ 'view.environment.index.total_mark_has_deleted'|trans }}</th>
-                                    <th>{{ 'view.environment.index.action_label'|trans }}</th>
-                                </tr>
-                                {% for environment in environments %}
-                                    {{ "Environmen's info"|emsco_debug({name: environment.name}) }}
-                                    {% if environment.managed %}
-                                        <tr>
-                                            <td class="text-center">{{ loop.index }}.</td>
-                                            <td>
-                                                <span class="badge bg-{{ environment.color|raw }}"
-                                                      title="Circles:{% for circle in environment.circles %}
-                                                     {% if not loop.first %}
-                                                       {% if loop.last %}
-                                                       &amp;
-                                                       {% else %}
-                                                       ,
-                                                       {% endif %}
-                                                     {% endif %}
-                                                      {{ circle|trans }}
-                                                    {% endfor %}">
-                                                    {{ environment.label }}
-                                                </span>
-                                            </td>
-                                            <td>{{ environment.name }}</td>
-                                            <td>{{ environment.alias }}</td>
-                                            <td>
-                                                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
-                                                        data-bs-target="#modal-environment-{{ environment.id }}">
-                                                    {{ 'view.environment.index.environment_index_count'|trans({'%count%': environment.indexes|length}) }}
-                                                </button>
-                                            </td>
-                                            <td class="text-center">{{ environment.total|number_format }}</td>
-                                            <td class="text-center">{{ environment.counter|number_format }}</td>
-                                            <td class="text-center">{{ environment.deletedRevision|number_format }}</td>
-                                            <td>
-                                                <div class="btn-group">
-                                                    {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-                                                        'url': path('environment.rebuild', {'id': environment.id}),
-                                                        'label': 'view.environment.index.rebuild_button'|trans,
-                                                        'icon': 'recycle'
-                                                    } %}
-                                                    {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-                                                        'url': path('environment.view', {'id': environment.id}),
-                                                        'label': 'view.environment.index.view_button'|trans,
-                                                        'icon': 'eye'
-                                                    } %}
-                                                    {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-                                                        'url': path('environment.edit', {'id': environment.id}),
-                                                        'label': 'view.environment.index.edit_button'|trans,
-                                                        'icon': 'pencil'
-                                                    } %}
-                                                    {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
-                                                        'url': path('environment.remove', {'id': environment.id}),
-                                                        'message': 'view.environment.index.confirm_delete'|trans({'%name%': environment.label}),
-                                                        'label': 'view.environment.index.delete_button'|trans,
-                                                        'icon': 'trash'
-                                                    } %}
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    {% endif %}
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    {% endif %}
-                </div>
-                <!-- /.box-body -->
+                {% form_theme form '@EMSAdminUI/bootstrap5/form/forms.html.twig' %}
+                {{ form(form, {
+                    reorder_label: 'environment.index.reorder',
+                    toolbar: toolbar
+                }) }}
             </div>
 
 
@@ -182,11 +56,11 @@
                 {% endif %}
             {% endfor %}
 
-            <div class="card card-{{ theme_color }} card-outline">
-                <div class="card-header">
-                    <h3 class="box-title"><i class="fa fa-database"></i> {{ 'view.environment.index.external_environments_title'|trans }}</h3>
+            <div class="card ">
+                <div class="card-header with-border">
+                    <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.external_environments_title'|trans }}</h3>
                 </div>
-                <!-- /.box-header -->
+                <!-- /.card-header -->
                 <div class="card-body">
                     {% if not found %}
                         {{ 'view.environment.index.no_external_environment_yet'|trans }}
@@ -250,7 +124,7 @@
                         </div>
                     {% endif %}
                 </div>
-                <!-- /.box-body -->
+                <!-- /.card-body -->
             </div>
 
 
@@ -260,22 +134,24 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title">{{ 'view.environment.index.environment_indexes_modal_title'|trans({'%name%': environment.label}) }}</h4>
-                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                </button>
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    <ul class="list-group">
-                                        {% for index in environment.indexes %}
-                                            <li class="list-group-item">
-                                                <span class="badge">{{ index.count }}</span>
-                                                {{ index.name }}
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
+                                <ul class="list-group">
+                                    {% for index in environment.indexes %}
+                                        <li class="list-group-item">
+                                            <span class="badge bg-primary">{{ index.count }}</span>
+                                            {{ index.name }}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
                                 </p>
                             </div>
-                            <div class="modal-footer text-left">
-                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default float-end" data-bs-dismiss="modal">
                                     Close
                                 </button>
                             </div>
@@ -286,8 +162,8 @@
                 </div>
             {% endfor %}
 
-            <div class="card card-{{ theme_color }} card-outline">
-                <div class="card-header">
+            <div class="card ">
+                <div class="card-header with-border">
                     <h3 class="card-title"><i class="fa fa-code-fork"></i> {{ 'view.environment.index.managed_alias_title'|trans }}</h3>
                     <div class="btn-group float-end">
                         <a class="btn btn-xs btn-primary" href="{{ path('environment_add_managed_alias') }}">
@@ -358,15 +234,16 @@
 
         <div class="col-md-5">
 
-            <div class="card card-{{ theme_color }} card-outline">
-                <div class="card-header">
+            <div class="card ">
+                <div class="card-header with-border">
                     <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.unreferenced_aliases_title'|trans }}</h3>
                 </div>
-                <!-- /.box-header -->
+                <!-- /.card-header -->
                 <div class="card-body">
                     {% if unreferencedAliases|length == 0 %}
                         {{ 'view.environment.index.all_indexes_are_referenced'|trans }}
                     {% else %}
+
                         <div class="table-responsive">
                             <table class="table table-condensed table-striped">
                                 <tbody>
@@ -410,14 +287,14 @@
                     {% endif %}
 
                 </div>
-                <!-- /.box-body -->
+                <!-- /.card-body -->
             </div>
         </div>
 
 
         <div class="col-md-7">
-            <div class="card card-{{ theme_color }} card-outline">
-                <div class="card-header">
+            <div class="card ">
+                <div class="card-header with-border">
                     <h3 class="card-title"><i class="fa fa-database"></i> {{ 'view.environment.index.orphan_index_title'|trans }}</h3>
                     <div class="btn-group float-end">
                         {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
@@ -428,11 +305,13 @@
                         } %}
                     </div>
                 </div>
-                <!-- /.box-header -->
+                <!-- /.card-header -->
                 <div class="card-body">
+
                     {% if orphanIndexes|length == 0 %}
                         {{ 'view.environment.index.there_is_no_orphan_index'|trans }}
                     {% else %}
+
                         <div class="table-responsive">
                             <table class="table table-condensed table-striped">
                                 <tbody>
@@ -473,7 +352,7 @@
                     {% endif %}
 
                 </div>
-                <!-- /.box-body -->
+                <!-- /.card-body -->
             </div>
         </div>
 
