--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
@@ -25,7 +25,7 @@
     {%- if attribute(line.data, column.attribute)|default(false) -%}
         <i class="fa fa-check-square" title="{{ 'form.data.bool_table_column.true_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_column.true_value'|trans }}</span>
     {%- else -%}
-        <i class="fa fa-square" title="{{ 'form.data.bool_table_column.false_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_columnm.false_value'|trans }}</span>
+        <i class="fa fa-square" title="{{ 'form.data.bool_table_column.false_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_column.false_value'|trans }}</span>
     {%- endif -%}
 {% endblock emsco_form_table_column_data_value_bool %}
 
