--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/cke-modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/cke-modal.html.twig
@@ -1,9 +1,9 @@
 {% trans_default_domain 'ems-adminui-twigs' %}
-<div class="modal core-modal fade" id="link-modal" tabindex="-1" role="dialog" aria-hidden="true" data-modal-init-url="{{ path('emsco_wysiwyg_modal_load_link') }}">
+<div class="modal core-modal fade" id="cke-modal" tabindex="-1" role="dialog" aria-hidden="true" data-init-link="{{ path('emsco_wysiwyg_modal_load_link') }}">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">{{ 'core.modal.link.title'|trans }}</h4>
+                <h4 class="modal-title" id="cke-modal-title">{{ 'core.modal.loading'|trans }}</h4>
                 <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body modal-loading">
