--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/cke-modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/cke-modal.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'ems-adminui-twigs' %}
-<div class="modal core-modal fade" id="cke-modal" tabindex="-1" role="dialog" aria-hidden="true" data-init-link="{{ path('emsco_wysiwyg_modal_load_link') }}">
+<div class="modal core-modal fade" id="cke-modal" tabindex="-1" role="dialog" aria-hidden="true" data-init-link="{{ path('emsco_wysiwyg_modal_load_link') }}" data-init-edit-image="{{ path('emsco_wysiwyg_modal_edit_image') }}">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
