--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
@@ -1,5 +1,5 @@
 {% use '@EMSAdminUI/bootstrap5/form/fields.html.twig' %}
-{% trans_default_domain 'form' %}
+{% trans_default_domain 'emsco-form' %}
 
 {% block emsco_form_table_column_data_value_template %}
     {{- include(template_from_string(column.template), {
@@ -23,9 +23,9 @@
 
 {% block emsco_form_table_column_data_value_bool %}
     {%- if attribute(line.data, column.attribute)|default(false) -%}
-        <i class="fa fa-check-square-o" title="{{ 'form.data.bool_table_collum.true_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_collum.true_value'|trans }}</span>
+        <i class="fa fa-check-square" title="{{ 'form.data.bool_table_column.true_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_column.true_value'|trans }}</span>
     {%- else -%}
-        <i class="fa fa-square-o" title="{{ 'form.data.bool_table_collum.false_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_collum.false_value'|trans }}</span>
+        <i class="fa fa-square" title="{{ 'form.data.bool_table_column.false_value'|trans }}"></i> <span class="visually-hidden">{{ 'form.data.bool_table_column.false_value'|trans }}</span>
     {%- endif -%}
 {% endblock emsco_form_table_column_data_value_bool %}
 
@@ -280,7 +280,7 @@
                             {{ toolbar }}
                         {% endif %}
                         {%  if table.sortable and table.supportsTableActions %}
-                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#{{ table.attributeName|e('html_attr') }}_modal_reorder">
+                            <button type="button" class="btn btn-default" data-bs-toggle="modal" data-bs-target="#{{ table.attributeName|e('html_attr') }}_modal_reorder">
                                 <i class="fa fa-reorder"></i> {{ reorder_label|default(form.vars.reorder_label)|trans }}
                             </button>
                         {% endif %}
@@ -293,7 +293,7 @@
                             <tr role="row">
                                 {% if table.supportsTableActions %}
                                     <th class="fit" data-orderable="false" data-name="_checkbox">
-                                        <label class="visually-hidden" for="select-all">{{ 'form.header.checkbo.select-all'|trans }}</label>
+                                        <label class="visually-hidden" for="select-all">{{ 'form.header.checkbox.select-all'|trans }}</label>
                                         <input type="checkbox" value="" data-grouped-checkbox-target=".{{ table.attributeName|e('html_attr') }}-to-select" id="select-all">
                                     </th>
                                 {% endif %}
@@ -356,10 +356,10 @@
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title" id="{{ table.attributeName|e('html_attr') }}_modal_reorder_label">
                                     <strong>{{ reorder_label|default(form.vars.reorder_label)|trans }}</strong>
                                 </h4>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             </div>
                             <div class="modal-body">
                                 <ul class="list-group sortable" id="{{ table.attributeName|e('html_attr') }}_modal_reorder_list">
@@ -378,7 +378,7 @@
                             <div class="modal-footer">
                                 <div class="btn-group">
                                     {{ form_widget(form.reorderAction) }}
-                                    <button type="button" class="btn" data-bs-dismiss="modal"><i class="fa fa-close"></i> {{ 'table.index.button.close'|trans }}</button>
+                                    <button type="button" class="btn btn-default" data-bs-dismiss="modal"><i class="fa fa-close"></i> {{ 'table.index.button.close'|trans }}</button>
                                 </div>
                             </div>
                         </div>
