--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -1488,6 +1488,16 @@
 	<div>
 		<img class="ems-cropper" src="{{ ems_asset_path(form.vars.value.file) }}">
 	</div>
+	<div class="btn-toolbar d-flex justify-content-center mt-2" role="toolbar">
+		<div class="btn-group me-2" role="group" aria-label="{{ 'edit_image.rotate.group'|trans }}">
+			<button type="button" class="btn btn-primary"><i class="fa fa-rotate-left"></i><span class="visually-hidden">{{ 'edit_image.rotate.left'|trans }}</span></button>
+			<button type="button" class="btn btn-primary"><i class="fa fa-rotate-right"><span class="visually-hidden"{{ 'edit_image.rotate.right'|trans }}</span></i></button>
+		</div>
+		<div class="btn-group me-2" role="group" aria-label="{{ 'edit_image.zoom.group'|trans }}">
+			<button type="button" class="btn btn-primary"><i class="fa fa-magnifying-glass-minus"></i><span class="visually-hidden">{{ 'edit_image.zoom.minus'|trans }}</span></button>
+			<button type="button" class="btn btn-primary"><i class="fa fa-magnifying-glass-plus"></i><span class="visually-hidden">{{ 'edit_image.zoom.plus'|trans }}</span></button>
+		</div>
+	</div>
 	<div>
 		{{ block('form_widget') }}
 	</div>
