--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -1491,7 +1491,11 @@
 	<div class="btn-toolbar d-flex justify-content-center mt-2" role="toolbar">
 		<div class="btn-group me-2" role="group" aria-label="{{ 'edit_image.rotate.group'|trans }}">
 			<button type="button" class="btn btn-primary"><i class="fa fa-rotate-left"></i><span class="visually-hidden">{{ 'edit_image.rotate.left'|trans }}</span></button>
-			<button type="button" class="btn btn-primary"><i class="fa fa-rotate-right"><span class="visually-hidden"{{ 'edit_image.rotate.right'|trans }}</span></i></button>
+			<button type="button" class="btn btn-primary"><i class="fa fa-rotate-right"></i><span class="visually-hidden"{{ 'edit_image.rotate.right'|trans }}</span></button>
+		</div>
+		<div class="btn-group me-2" role="group" aria-label="{{ 'edit_image.flip.group'|trans }}">
+			<button type="button" class="btn btn-primary"><i class="fa-solid fa-arrows-left-right"></i><span class="visually-hidden">{{ 'edit_image.flip.horizontal'|trans }}</span></button>
+			<button type="button" class="btn btn-primary"><i class="fa-solid fa-arrows-up-down"></i><span class="visually-hidden"{{ 'edit_image.flip.vertical'|trans }}</span></i></button>
 		</div>
 		<div class="btn-group me-2" role="group" aria-label="{{ 'edit_image.zoom.group'|trans }}">
 			<button type="button" class="btn btn-primary"><i class="fa fa-magnifying-glass-minus"></i><span class="visually-hidden">{{ 'edit_image.zoom.minus'|trans }}</span></button>
