feat: edit image basic actions

--- a/EMS/admin-ui-bundle/assets/css/core/plugins/cropper.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/plugins/cropper.scss
@@ -1,4 +1,6 @@
-img.ems-cropper {
-  display: block;
-  max-width: 100%;
+.ems-cropper {
+  img {
+    display: block;
+    max-width: 100%;
+  }
 }
