--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -1501,6 +1501,7 @@
 			<div class="btn-group me-2" role="group" aria-label="{{ 'edit_image.zoom.group'|trans }}">
 				<button type="button" class="btn btn-primary ems-cropper-zoom-out" title="{{ 'edit_image.zoom.minus'|trans }}"><i class="fa fa-magnifying-glass-minus"></i><span class="visually-hidden">{{ 'edit_image.zoom.minus'|trans }}</span></button>
 				<button type="button" class="btn btn-primary ems-cropper-zoom-in" title="{{ 'edit_image.zoom.plus'|trans }}"><i class="fa fa-magnifying-glass-plus"></i><span class="visually-hidden">{{ 'edit_image.zoom.plus'|trans }}</span></button>
+				<button type="button" class="btn btn-primary ems-cropper-zoom-reset" title="{{ 'edit_image.zoom.reset'|trans }}"><i class="fa-solid fa-expand"></i><span class="visually-hidden">{{ 'edit_image.zoom.reset'|trans }}</span></button>
 			</div>
 		</div>
 	</div>
