fix: image resized in cke5

--- a/demo/src/css/styles.scss
+++ b/demo/src/css/styles.scss
@@ -34,6 +34,7 @@ $admin-menu-font-color: #FFFFFF;
 @import "components/text";
 @import "components/cookiesBanner";
 @import "components/languages-page";
+@import "components/image";
 
 @import "pages/with_banner";
 @import "pages/error";
