--- a/EMS/core-bundle/src/Resources/views/data/trash.html.twig
+++ b/EMS/core-bundle/src/Resources/views/data/trash.html.twig
@@ -1,7 +1,7 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
 {% block title %}{{ 'Trash for content type %name%'|trans({'%name%': contentType.singularName}) }}{% endblock %}
-{% block pagetitle %}{{ 'Trash for content type %name%'|trans({'%name%': contentType.singularName}) }}{% endblock %} 
+{% block pagetitle %}{{ 'Trash for content type %name%'|trans({'%name%': contentType.singularName}) }}{% endblock %}
 
 
 {% block body %}
@@ -43,10 +43,10 @@
 									{{ revision.modified|date(date_time_format) }}
 								</td>
 								<td>
-								
+
 									<div class="btn-group">
                                         {% include '@EMSCore/elements/post-button.html.twig' with {
-											'url': path('ems_data_put_back', {
+											'url': path('emsco_data_put_back', {
 												'contentType': revision.contentType.id,
 												'ouuid': revision.ouuid
 											}),
@@ -55,7 +55,7 @@
 											'icon': 'recycle'
 										}%}
                                         {% include '@EMSCore/elements/post-button.html.twig' with {
-											'url': path('ems_data_empty_trash', {
+											'url': path('emsco_data_empty_trash', {
 												'contentType': revision.contentType.id,
 												'ouuid': revision.ouuid
 											}),
@@ -64,8 +64,8 @@
 											'icon': 'trash'
 										}%}
 				                    </div>
-								
-              
+
+
 								</td>
 							</tr>
 						{% endfor %}
@@ -87,4 +87,4 @@
 {% include '@EMSCore/app/menu.html.twig' with {
 	'item':  'data-draft-' ~ contentType.id
 }%}
-{% endblock %}	
+{% endblock %}
