--- a/demo/skeleton/template_ems/dashboard/media_library.twig
+++ b/demo/skeleton/template_ems/dashboard/media_library.twig
@@ -20,7 +20,7 @@
     <div><a href="{{- mediaFile.urlView -}}" download="{{- mediaFile.name -}}" data-ems-id="{{- mediaFile.emsId -}}">{{- mediaFile.name -}}</a></div>
     <div>{{- mediaFile.file.mimetype|trans({}, 'emsco-mimetypes') -}}</div>
     <div><a href="{{ path('emsco_view_revisions', { 'type': mediaFile.document.contentType, 'ouuid': mediaFile.id  }) }}">show revision</a></div>
-    <div class="text-right">{{- mediaFile.file.filesize|format_bytes -}}</div>
+    <div class="text-right">{{- mediaFile.file.filesize|default(0)|format_bytes -}}</div>
 {%- endblock media_lib_file -%}
 
 
