fix: show action for pages not attached structure
Create a page and directly show it in the frontend.
Added new slug field for pages.
First check structure paths, then page paths.

--- a/demo/skeleton/template/page/by_type.html.twig
+++ b/demo/skeleton/template/page/by_type.html.twig
@@ -15,7 +15,7 @@
         <ol class="breadcrumb text-white">
             <li class="breadcrumb-item">
                 <i class="fas fa-chevron-left mr-1"></i>
-                {% if currentStructure and attribute(currentStructure.getItemById(pathInfo.uid).parent.object, locale).title is defined %}
+                {% if currentStructure is defined and attribute(currentStructure.getItemById(pathInfo.uid).parent.object, locale).title is defined %}
                     <a class="text-white" href="{{ path('emsch_path', { path: attribute(pathsByUids, currentStructure.getItemById(pathInfo.uid).parent.id).path }) }}">{{ 'breadcrumb.back-to'|trans({('%title%'): attribute(currentStructure.getItemById(pathInfo.uid).parent.object, locale).title}) }}</a>
                 {% else %}
                     <a class="text-white" href="{{ path('emsch_path') }}">{{ 'breadcrumb.back-to'|trans({('%title%'): 'breadcrumb.homepage'|trans}) }}</a>
