--- a/demo/skeleton/template/page/default.html.twig
+++ b/demo/skeleton/template/page/default.html.twig
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 mb-2">
                     {% block breadcrumb %}{% endblock %}
-                    <h1 {{ emsch_admin_menu(target.getEmsLink|default(emsLink)) }}>
+                    <h1 {{ emsch_admin_menu(target.getEmsLink|default(emsLink|default(''))) }}>
                         {{ block('title') }}
                     </h1>
                     {{ attribute(source, locale).summary|default('')|emsch_routing }}
