--- a/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
+++ b/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
@@ -60,11 +60,12 @@
 {%- block jmn_button_item_more_menu -%}
     <li>{{ template.block('jmn_button_item_view', _context)|raw }}</li>
     <li>{{ template.block('jmn_button_item_edit', _context)|raw }}</li>
-    {%- if item.children|length == 0 -%}<li>{{- template.block('jmn_button_item_delete', _context)|raw -}}</li>{%- endif -%}
     {%- if item.type == 'page' and pageInfo -%}
         <li>
             <button class="btn-detach-page" data-item-id="{{ item.id }}" data-page-id="{{ pageInfo.id.ouuid }}">Detach page</button>
         </li>
+    {% elseif item.children|length == 0 %}
+        <li>{{- template.block('jmn_button_item_delete', _context)|raw -}}</li>
     {% endif %}
 {%- endblock jmn_button_item_more_menu -%}
 
