--- a/demo/skeleton/template_ems/content_type/compute_paths.twig
+++ b/demo/skeleton/template_ems/content_type/compute_paths.twig
@@ -9,6 +9,7 @@
             {% set baseUrl = baseUrl|merge({(locale): ''}) %}
         {%  endfor %}
         {% set structure = _source.structure|default('{}')|ems_json_menu_nested_decode %}
+        {% set homeAttached = false %}
         {% for item in structure %}
             {% set path = [] %}
             {% for p in item.path %}
@@ -18,13 +19,21 @@
             {% endfor %}
 
             {% for locale in locales|filter(locale => attribute(path, locale)|length > 0 and null not in attribute(path, locale)) %}
+                {% if homeAttached == false and attribute(item.object, locale).title|default|ems_webalize != 'home' %}
+                    {% set paths = paths|merge([{
+                        'uid': (item.id),
+                        'path' : "home",
+                        'locale' : locale,
+                    }]) %}
+                {% endif %}
+
                 {% set paths = paths|merge([{
                     'uid': (item.id),
                     'path' : attribute(baseUrl, locale) ~ (attribute(path, locale)|map(p => p|ems_webalize)|join('/')|default('/')),
                     'locale' : locale,
                 }]) %}
             {% endfor %}
-
+            {% set homeAttached = true %}
         {% endfor %}
         {{ paths|default([])|json_encode|raw }}
     {% endif %}
